feat: 피드 요약 리치화 — content·imageCount·participants 추가 (#53)
프로토타입 피드 카드(참여자 아바타·본문 미리보기·사진 N장 배지)를 채우기 위해
MemorySummary를 리치화. 전부 memoryIds 배치 조회로 N+1 회피.
- content: findFeed가 이미 select하던 m.content를 요약에 노출
- imageCount + thumbnailUrl: findCoverInfoByMemoryIds(ROW_NUMBER+COUNT window)로 대표+개수 한 번에
- participants: findParticipantsByMemoryIds(그룹핑) + ParticipantRow.memoryId
통합테스트 보강(피드 items content·imageCount·participants). 계약 §6 갱신.

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>